--- a/QssFile/example.qss
+++ b/QssFile/example.qss
@@ -13,3 +13,7 @@ QPushButton:hover, QPushButton:pressed, QPushButton:checked{
     padding-right:20px;
     font-weight:100
 }
+
+QToolButton#aa:pressed{
+    color: red
+    }
