Signed-off-by: YeClimEric <tianhuanxings@163.com>

--- a/QssFile/example.qss
+++ b/QssFile/example.qss
@@ -17,3 +17,9 @@ QPushButton:hover, QPushButton:pressed, QPushButton:checked{
 QToolButton#aa:pressed{
     color: red
     }
+QTableWidget{
+    color:red;
+    border:none;
+    padding:5px
+    
+    }
