--- a/DockWdg/component.ui
+++ b/DockWdg/component.ui
@@ -61,7 +61,21 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="qwContextArea" native="true"/>
+    <widget class="QWidget" name="qwContextArea" native="true">
+     <widget class="QPushButton" name="pushButton">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>20</y>
+        <width>75</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>PushButton</string>
+      </property>
+     </widget>
+    </widget>
    </item>
    <item>
     <widget class="QWidget" name="qwButtonBar" native="true">
