--- a/QMLTest/qml.qrc
+++ b/QMLTest/qml.qrc
@@ -7,5 +7,9 @@
         <file>ShapeShiftingDelegate.qml</file>
         <file>ListModelGridViewDelegate.qml</file>
         <file>PathViewDemo.qml</file>
+        <file>CanvasBase.qml</file>
+        <file>ParticalSimulation.qml</file>
+        <file>image/star.png</file>
+        <file>Tracer.qml</file>
     </qresource>
 </RCC>
