--- a/QBarrage/QBarrage.qrc
+++ b/QBarrage/QBarrage.qrc
@@ -20,4 +20,9 @@
         <file alias="white">resource/color/White.png</file>
         <file alias="yellow">resource/color/Yellow.png</file>
     </qresource>
+    <qresource prefix="/gift">
+        <file>resource/gift/Gift_LV1.gif</file>
+        <file>resource/gift/Gift_LV2.gif</file>
+        <file>resource/gift/Gift_LV3.gif</file>
+    </qresource>
 </RCC>
