Signed-off-by: YeClimEric <yeclimeric@gmail.com>

--- a/QT/CommonComponents/Resource/images_Blue/Skins.qss
+++ b/QT/CommonComponents/Resource/images_Blue/Skins.qss
@@ -1,5 +1,5 @@
-/*Blue*/
+/*Default*/
 QLabel{
-    border-image: url(:/images/images_Blue/level.png);
+    border-image: url(:/images/images/level.png);
 }
 
